# ML_2026

./: pyproject.toml  seminar_1.ipynb  seminar_12.ipynb  seminar_12_nixtla.ipynb  seminar_2.ipynb  seminar_3.ipynb  seminar_5_students.ipynb  seminar_6_students.ipynb  seminar_8.ipynb  seminar_9.ipynb  Результаты.md  Результаты.ods
deploy/: 0_train_models.ipynb  1_test_models.ipynb  2_convert_to_onnx.ipynb  3_test_onnx.ipynb  4_drift_monitor.ipynb  drift_report.html  readme.txt  requirements.txt
deploy/app/: main.py  test_api.py
deploy/data/: current.csv
deploy/models/: iris_catboost.cbm  iris_nn.pt  iris_rf.onnx  iris_rf.pkl
deploy/triton/: docker-compose.yml  readme_triton.txt  triton_client.py
deploy/triton/model_repository/iris_classifier/: config.pbtxt
deploy/triton/model_repository/iris_classifier/1/: iris_catboost.onnx  iris_nn.onnx  model.py
hw1/: hw1_students.ipynb
hw2/: data.pickle  hw2.ipynb
